Changelog
---------

v5.7.0:
 Translations:
  - updated spanish translation by Luis Llorente Campo
    <luisllorente@luisllorente.com>
 ExerciseViewer changes:
  - update of Garmin FIT SDK to version 4.20 (for parsing FIT files)
  
v5.6.0:
 SportsTracker changes:
  - Findbugs bugfixes in all modules (minor code improvements)
  - Mac OS X application bundle creation: 
    - The huge JRE is not included anymore, the app size is now 12 MByte 
      instead of 67 before. Since JDK 7u6 for OS X the launcher is able to find
      the installed JRE (needs to be installed!)
    - The appbundler Ant library is now included, no installation needed.
  - Java WebStart for Mac OS X is working again, when JDK / JRE 7u6 or later
    is installed.
  - Overview Dialog: improved weight graph (SF feature request #3554633):
    Missing weight values will be interpolated instead of set to 0.
  - Calendar View: (SF feature request #3082257):
    current day is better recognizable by using a different color (blue for
    weekdays, red/orange for sundays)
  - Overview Dialog:
    - new diagram mode for sport subtype overview of a selected sport type
      (shows the distances per sport subtype of one sport type)
    - new diagram mode for equipment usage overview of a selected sport type
      (shows the distances per equipment of one sport type)
    - bigger size, much more readable (still fits on 1024x768 displays)
  - update to Groovy 2.0.1, usage of new Groovy features
    - use only the required Groovy modules instead of groovy-all dependency
      => the Groovy libraries are now about 3 MByte smaller
    - use of the new Groovy-Eclipse compiler plugin for Maven (2.7.0_01)
    - usage of the new @TypeChecked type checking at compilation time in all
      Groovy unit tests, type errors are now found immediately
    - usage of the new @TypeChecked type checking makes no sense for the
      Groovy exercise parsers, the dynamic XML parsing features can't be used
      anymore