@@ -2,13 +2,11 @@ SportsTracker-TODO
 ==================
 
 Support for Garmin Forerunner 910XT (Feature request #3578651):
-- Problems when parsing 910 XT FIT files
-  => see TODOs in GarminFitParser
-  => remove System.out's
   => add test files for special cases
-  => documentation in ReadMe + website
-=> all the parsers must also be able to handle NullPointerExceptions, otherwise errors are 
-   not visible for the users
+Before next release:
+- add support for Garmin Forerunner 910XT in website
+- all the parsers must also be able to handle NullPointerExceptions, otherwise errors are 
+  not visible for the users
 
 Mac OS X integration:
 - Application name is not displayed in the MenuBar, it shows STMain instead
